Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-31569

Spontaneous crash in Creator 14.0

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Not Evaluated Not Evaluated
    • Qt Creator 14.0.2
    • Qt Creator 14.0.2
    • All Other Issues
    • None
    • Linux/X11
    • e986dc893 (14.0)

      Thread 1 (Thread 0x717714c006c0 (LWP 65928)):
      #0  __pthread_kill_implementation (no_tid=0, signo=6, threadid=<optimized out>) at ./nptl/pthread_kill.c:44
      #1  __pthread_kill_internal (signo=6, threadid=<optimized out>) at ./nptl/pthread_kill.c:78
      #2  __GI___pthread_kill (threadid=<optimized out>, signo=signo@entry=6) at ./nptl/pthread_kill.c:89
      #3  0x000071776fe4526e in __GI_raise (sig=sig@entry=6) at ../sysdeps/posix/raise.c:26
      #4  0x000071776fe288ff in __GI_abort () at ./stdlib/abort.c:79
      #5  0x00007177706f4378 in qAbort () at /home/jarek/dev/qt-66/qtbase/src/corelib/global/qglobal.cpp:161
      #6  0x0000717770704238 in qt_message_fatal<QString&> (context=..., message=...) at /home/jarek/dev/qt-66/qtbase/src/corelib/global/qlogging.cpp:2030
      #7  0x00007177706fe5e0 in qt_message(QtMsgType, const QMessageLogContext &, const char *, typedef __va_list_tag __va_list_tag *) (msgType=QtFatalMsg, context=..., msg=0x717770c80978 "ASSERT: \"%s\" in file %s, line %d", ap=0x717714bfed70) at /home/jarek/dev/qt-66/qtbase/src/corelib/global/qlogging.cpp:378
      #8  0x00007177706ffccc in QMessageLogger::fatal (this=0x717714bfee70, msg=0x717770c80978 "ASSERT: \"%s\" in file %s, line %d") at /home/jarek/dev/qt-66/qtbase/src/corelib/global/qlogging.cpp:901
      #9  0x00007177706f29ad in qt_assert (assertion=0x71774ed55b31 "it.isUnused()", file=0x71774ed55958 "/home/jarek/dev/qt-66/qtbase/src/corelib/tools/qhash.h", line=727) at /home/jarek/dev/qt-66/qtbase/src/corelib/global/qassert.cpp:68
      #10 0x000071774e72bd91 in QHashPrivate::Data<QHashPrivate::Node<QString, QHashDummyValue> >::findOrInsert (this=0x7172c885a600, key=...) at /home/jarek/dev/qt-66/qtbase/src/corelib/tools/qhash.h:727
      #11 0x000071774e72aad6 in QHash<QString, QHashDummyValue>::emplace_helper<QHashDummyValue> (this=0x71774f0c3b90 <CppEditor::isOwnershipRAIIName(QString const&)::knownNames>, key=...) at /home/jarek/dev/qt-66/qtbase/src/corelib/tools/qhash.h:1335
      #12 0x000071774e9906ba in QHash<QString, QHashDummyValue>::emplace<QHashDummyValue> (this=0x71774f0c3b90 <CppEditor::isOwnershipRAIIName(QString const&)::knownNames>, key=...) at /home/jarek/dev/qt-66/qtbase/src/corelib/tools/qhash.h:1316
      #13 0x000071774e98957d in QSet<QString>::insert (this=0x71774f0c3b90 <CppEditor::isOwnershipRAIIName(QString const&)::knownNames>, value=...) at /home/jarek/dev/qt-66/qtbase/src/corelib/tools/qset.h:158
      #14 0x000071774ea1185f in CppEditor::isOwnershipRAIIName (name=...) at /home/jarek/dev/creator-14/src/plugins/cppeditor/cpptoolsreuse.cpp:153
      #15 0x000071774ea11e98 in CppEditor::isOwnershipRAIIType (symbol=0x7176b8703780, context=...) at /home/jarek/dev/creator-14/src/plugins/cppeditor/cpptoolsreuse.cpp:184
      #16 0x000071774e7362d3 in CppEditor::(anonymous namespace)::FindUses::splitLocalUses (this=0x717714bff320, uses=..., rangesForLocalVariableUnderCursor=0x717714bff9f0, rangesForLocalUnusedVariables=0x717714bffa10) at /home/jarek/dev/creator-14/src/plugins/cppeditor/builtincursorinfo.cpp:210
      #17 0x000071774e735fb9 in CppEditor::(anonymous namespace)::FindUses::doFind (this=0x717714bff320) at /home/jarek/dev/creator-14/src/plugins/cppeditor/builtincursorinfo.cpp:176
      #18 0x000071774e735e18 in CppEditor::(anonymous namespace)::FindUses::find (document=..., content=..., snapshot=..., line=674, column=42, scope=0x0, expression=...) at /home/jarek/dev/creator-14/src/plugins/cppeditor/builtincursorinfo.cpp:147
      #19 0x000071774e73fb84 in std::__invoke_impl<CppEditor::CursorInfo, CppEditor::CursorInfo (*&)(QSharedPointer<CPlusPlus::Document>, QString const&, CPlusPlus::Snapshot const&, int, int, CPlusPlus::Scope*, QString const&), QSharedPointer<CPlusPlus::Document>&, QString&, CPlusPlus::Snapshot&, int&, int&, CPlusPlus::Scope*&, QString&> (__f=@0x717714bff688: 0x71774e735d31 <CppEditor::(anonymous namespace)::FindUses::find(CPlusPlus::Document::Ptr, QString const&, CPlusPlus::Snapshot const&, int, int, CPlusPlus::Scope*, QString const&)>) at /usr/include/c++/13/bits/invoke.h:61
      #20 0x000071774e73f500 in std::__invoke<CppEditor::CursorInfo (*&)(QSharedPointer<CPlusPlus::Document>, QString const&, CPlusPlus::Snapshot const&, int, int, CPlusPlus::Scope*, QString const&), QSharedPointer<CPlusPlus::Document>&, QString&, CPlusPlus::Snapshot&, int&, int&, CPlusPlus::Scope*&, QString&> (__fn=@0x717714bff688: 0x71774e735d31 <CppEditor::(anonymous namespace)::FindUses::find(CPlusPlus::Document::Ptr, QString const&, CPlusPlus::Snapshot const&, int, int, CPlusPlus::Scope*, QString const&)>) at /usr/include/c++/13/bits/invoke.h:97
      #21 0x000071774e73f0a9 in std::invoke<CppEditor::CursorInfo (*&)(QSharedPointer<CPlusPlus::Document>, QString const&, CPlusPlus::Snapshot const&, int, int, CPlusPlus::Scope*, QString const&), QSharedPointer<CPlusPlus::Document>&, QString&, CPlusPlus::Snapshot&, int&, int&, CPlusPlus::Scope*&, QString&> (__fn=@0x717714bff688: 0x71774e735d31 <CppEditor::(anonymous namespace)::FindUses::find(CPlusPlus::Document::Ptr, QString const&, CPlusPlus::Snapshot const&, int, int, CPlusPlus::Scope*, QString const&)>) at /usr/include/c++/13/functional:114
      #22 0x000071774e73ecb4 in QtConcurrent::StoredFunctionCall<CppEditor::CursorInfo (*)(QSharedPointer<CPlusPlus::Document>, QString const&, CPlusPlus::Snapshot const&, int, int, CPlusPlus::Scope*, QString const&), QSharedPointer<CPlusPlus::Document>, QString, CPlusPlus::Snapshot, int, int, CPlusPlus::Scope*, QString>::runFunctor()::{lambda(CppEditor::CursorInfo (*)(QSharedPointer<CPlusPlus::Document>, QString const&, CPlusPlus::Snapshot const&, int, int, CPlusPlus::Scope*, QString const&), QSharedPointer<CPlusPlus::Document>, QString, CPlusPlus::Snapshot, int, int, CPlusPlus::Scope*, QString)#1}::operator()(CppEditor::CursorInfo (*)(QSharedPointer<CPlusPlus::Document>, QString const&, CPlusPlus::Snapshot const&, int, int, CPlusPlus::Scope*, QString const&), QSharedPointer<CPlusPlus::Document>, QString, CPlusPlus::Snapshot, int, int, CPlusPlus::Scope*, QString) const (__closure=0x717714bff9ef, function=0x71774e735d31 <CppEditor::(anonymous namespace)::FindUses::find(CPlusPlus::Document::Ptr, QString const&, CPlusPlus::Snapshot const&, int, int, CPlusPlus::Scope*, QString const&)>, args#0=..., args#1=..., args#2=..., args#3=674, args#4=42, args#5=0x0, args#6=...) at /home/jarek/dev/qt-66/qtbase/src/concurrent/qtconcurrentstoredfunctioncall.h:116
      #23 0x000071774e73f7e9 in std::__invoke_impl<CppEditor::CursorInfo, QtConcurrent::StoredFunctionCall<CppEditor::CursorInfo (*)(QSharedPointer<CPlusPlus::Document>, QString const&, CPlusPlus::Snapshot const&, int, int, CPlusPlus::Scope*, QString const&), QSharedPointer<CPlusPlus::Document>, QString, CPlusPlus::Snapshot, int, int, CPlusPlus::Scope*, QString>::runFunctor()::{lambda(CppEditor::CursorInfo (* const&)(QSharedPointer<CPlusPlus::Document>, QString const&, CPlusPlus::Snapshot const&, int, int, CPlusPlus::Scope*, QString const&), QSharedPointer<CPlusPlus::Document>, QString, CPlusPlus::Snapshot, int, int, CPlusPlus::Scope*, QString)#1}, CppEditor::CursorInfo (*)(QSharedPointer<CPlusPlus::Document>, QString const&, CPlusPlus::Snapshot const&, int, int, CPlusPlus::Scope*, QString const&), QSharedPointer<CPlusPlus::Document>, QString, CPlusPlus::Snapshot, int, int, CPlusPlus::Scope*, QString>(std::__invoke_other, QtConcurrent::StoredFunctionCall<CppEditor::CursorInfo (*)(QSharedPointer<CPlusPlus::Document>, QString const&, CPlusPlus::Snapshot const&, int, int, CPlusPlus::Scope*, QString const&), QSharedPointer<CPlusPlus::Document>, QString, CPlusPlus::Snapshot, int, int, CPlusPlus::Scope*, QString>::runFunctor()::{lambda(CppEditor::CursorInfo (* const&)(QSharedPointer<CPlusPlus::Document>, QString const&, CPlusPlus::Snapshot const&, int, int, CPlusPlus::Scope*, QString const&), QSharedPointer<CPlusPlus::Document>, QString, CPlusPlus::Snapshot, int, int, CPlusPlus::Scope*, QString)#1}, CppEditor::CursorInfo (*&&)(QSharedPointer<CPlusPlus::Document>, QString const&, CPlusPlus::Snapshot const&, int, int, CPlusPlus::Scope*, QString const&), QSharedPointer<CPlusPlus::Document>&&, QString&&, CPlusPlus::Snapshot&&, int&&, int&&, CPlusPlus::Scope*&&, QString&&) (__f=...) at /usr/include/c++/13/bits/invoke.h:61
      #24 0x000071774e73f351 in std::__invoke<QtConcurrent::StoredFunctionCall<CppEditor::CursorInfo (*)(QSharedPointer<CPlusPlus::Document>, QString const&, CPlusPlus::Snapshot const&, int, int, CPlusPlus::Scope*, QString const&), QSharedPointer<CPlusPlus::Document>, QString, CPlusPlus::Snapshot, int, int, CPlusPlus::Scope*, QString>::runFunctor()::{lambda(CppEditor::CursorInfo (* const&)(QSharedPointer<CPlusPlus::Document>, QString const&, CPlusPlus::Snapshot const&, int, int, CPlusPlus::Scope*, QString const&), QSharedPointer<CPlusPlus::Document>, QString, CPlusPlus::Snapshot, int, int, CPlusPlus::Scope*, QString)#1}, CppEditor::CursorInfo (*)(QSharedPointer<CPlusPlus::Document>, QString const&, CPlusPlus::Snapshot const&, int, int, CPlusPlus::Scope*, QString const&), QSharedPointer<CPlusPlus::Document>, QString, CPlusPlus::Snapshot, int, int, CPlusPlus::Scope*, QString>(QtConcurrent::StoredFunctionCall<CppEditor::CursorInfo (*)(QSharedPointer<CPlusPlus::Document>, QString const&, CPlusPlus::Snapshot const&, int, int, CPlusPlus::Scope*, QString const&), QSharedPointer<CPlusPlus::Document>, QString, CPlusPlus::Snapshot, int, int, CPlusPlus::Scope*, QString>::runFunctor()::{lambda(CppEditor::CursorInfo (* const&)(QSharedPointer<CPlusPlus::Document>, QString const&, CPlusPlus::Snapshot const&, int, int, CPlusPlus::Scope*, QString const&), QSharedPointer<CPlusPlus::Document>, QString, CPlusPlus::Snapshot, int, int, CPlusPlus::Scope*, QString)#1}, CppEditor::CursorInfo (*&&)(QSharedPointer<CPlusPlus::Document>, QString const&, CPlusPlus::Snapshot const&, int, int, CPlusPlus::Scope*, QString const&), QSharedPointer<CPlusPlus::Document>&&, QString&&, CPlusPlus::Snapshot&&, int&&, int&&, CPlusPlus::Scope*&&, QString&&) (__fn=...) at /usr/include/c++/13/bits/invoke.h:97
      #25 0x000071774e73edee in std::__apply_impl<QtConcurrent::StoredFunctionCall<CppEditor::CursorInfo (*)(QSharedPointer<CPlusPlus::Document>, QString const&, CPlusPlus::Snapshot const&, int, int, CPlusPlus::Scope*, QString const&), QSharedPointer<CPlusPlus::Document>, QString, CPlusPlus::Snapshot, int, int, CPlusPlus::Scope*, QString>::runFunctor()::{lambda(CppEditor::CursorInfo (* const&)(QSharedPointer<CPlusPlus::Document>, QString const&, CPlusPlus::Snapshot const&, int, int, CPlusPlus::Scope*, QString const&), QSharedPointer<CPlusPlus::Document>, QString, CPlusPlus::Snapshot, int, int, CPlusPlus::Scope*, QString)#1}, std::tuple<CppEditor::CursorInfo (*)(QSharedPointer<CPlusPlus::Document>, QString const&, CPlusPlus::Snapshot const&, int, int, CPlusPlus::Scope*, QString const&), QSharedPointer<CPlusPlus::Document>, QString, CPlusPlus::Snapshot, int, int, CPlusPlus::Scope*, QString>, 0ul, 1ul, 2ul, 3ul, 4ul, 5ul, 6ul, 7ul>(QtConcurrent::StoredFunctionCall<CppEditor::CursorInfo (*)(QSharedPointer<CPlusPlus::Document>, QString const&, CPlusPlus::Snapshot const&, int, int, CPlusPlus::Scope*, QString const&), QSharedPointer<CPlusPlus::Document>, QString, CPlusPlus::Snapshot, int, int, CPlusPlus::Scope*, QString>::runFunctor()::{lambda(CppEditor::CursorInfo (* const&)(QSharedPointer<CPlusPlus::Document>, QString const&, CPlusPlus::Snapshot const&, int, int, CPlusPlus::Scope*, QString const&), QSharedPointer<CPlusPlus::Document>, QString, CPlusPlus::Snapshot, int, int, CPlusPlus::Scope*, QString)#1}, std::tuple<CppEditor::CursorInfo (*)(QSharedPointer<CPlusPlus::Document>, QString const&, CPlusPlus::Snapshot const&, int, int, CPlusPlus::Scope*, QString const&), QSharedPointer<CPlusPlus::Document>, QString, CPlusPlus::Snapshot, int, int, CPlusPlus::Scope*, QString>&&, std::integer_sequence<unsigned long, 0ul, 1ul, 2ul, 3ul, 4ul, 5ul, 6ul, 7ul>) (__f=..., __t=...) at /usr/include/c++/13/tuple:2303
      #26 0x000071774e73ee71 in std::apply<QtConcurrent::StoredFunctionCall<CppEditor::CursorInfo (*)(QSharedPointer<CPlusPlus::Document>, QString const&, CPlusPlus::Snapshot const&, int, int, CPlusPlus::Scope*, QString const&), QSharedPointer<CPlusPlus::Document>, QString, CPlusPlus::Snapshot, int, int, CPlusPlus::Scope*, QString>::runFunctor()::{lambda(CppEditor::CursorInfo (* const&)(QSharedPointer<CPlusPlus::Document>, QString const&, CPlusPlus::Snapshot const&, int, int, CPlusPlus::Scope*, QString const&), QSharedPointer<CPlusPlus::Document>, QString, CPlusPlus::Snapshot, int, int, CPlusPlus::Scope*, QString)#1}, std::tuple<CppEditor::CursorInfo (*)(QSharedPointer<CPlusPlus::Document>, QString const&, CPlusPlus::Snapshot const&, int, int, CPlusPlus::Scope*, QString const&), QSharedPointer<CPlusPlus::Document>, QString, CPlusPlus::Snapshot, int, int, CPlusPlus::Scope*, QString> >(QtConcurrent::StoredFunctionCall<CppEditor::CursorInfo (*)(QSharedPointer<CPlusPlus::Document>, QString const&, CPlusPlus::Snapshot const&, int, int, CPlusPlus::Scope*, QString const&), QSharedPointer<CPlusPlus::Document>, QString, CPlusPlus::Snapshot, int, int, CPlusPlus::Scope*, QString>::runFunctor()::{lambda(CppEditor::CursorInfo (* const&)(QSharedPointer<CPlusPlus::Document>, QString const&, CPlusPlus::Snapshot const&, int, int, CPlusPlus::Scope*, QString const&), QSharedPointer<CPlusPlus::Document>, QString, CPlusPlus::Snapshot, int, int, CPlusPlus::Scope*, QString)#1}, std::tuple<CppEditor::CursorInfo (*)(QSharedPointer<CPlusPlus::Document>, QString const&, CPlusPlus::Snapshot const&, int, int, CPlusPlus::Scope*, QString const&), QSharedPointer<CPlusPlus::Document>, QString, CPlusPlus::Snapshot, int, int, CPlusPlus::Scope*, QString>&&) (__f=..., __t=...) at /usr/include/c++/13/tuple:2315
      #27 0x000071774e73eed6 in QtConcurrent::StoredFunctionCall<CppEditor::CursorInfo (*)(QSharedPointer<CPlusPlus::Document>, QString const&, CPlusPlus::Snapshot const&, int, int, CPlusPlus::Scope*, QString const&), QSharedPointer<CPlusPlus::Document>, QString, CPlusPlus::Snapshot, int, int, CPlusPlus::Scope*, QString>::runFunctor (this=0x583e255e7750) at /home/jarek/dev/qt-66/qtbase/src/concurrent/qtconcurrentstoredfunctioncall.h:122
      #28 0x000071774e73eb0e in QtConcurrent::RunFunctionTaskBase<CppEditor::CursorInfo>::run (this=0x583e255e7750) at /home/jarek/dev/qt-66/qtbase/src/concurrent/qtconcurrentrunbase.h:83
      #29 0x0000717770a94342 in QThreadPoolThread::run (this=0x583e21947900) at /home/jarek/dev/qt-66/qtbase/src/corelib/thread/qthreadpool.cpp:66
      #30 0x0000717770a8cc7f in operator() (__closure=0x717714bffc48) at /home/jarek/dev/qt-66/qtbase/src/corelib/thread/qthread_unix.cpp:324
      #31 0x0000717770a8df6f in (anonymous namespace)::terminate_on_exception<QThreadPrivate::start(void*)::<lambda()> >(struct {...} &&) (t=...) at /home/jarek/dev/qt-66/qtbase/src/corelib/thread/qthread_unix.cpp:260
      #32 0x0000717770a8cd69 in QThreadPrivate::start (arg=0x583e21947900) at /home/jarek/dev/qt-66/qtbase/src/corelib/thread/qthread_unix.cpp:283
      #33 0x000071776fe9ca94 in start_thread (arg=<optimized out>) at ./nptl/pthread_create.c:447
      #34 0x000071776ff29c3c in clone3 () at ../sysdeps/unix/sysv/linux/x86_64/clone3.S:78
      

        For Gerrit Dashboard: QTCREATORBUG-31569
        # Subject Branch Project Status CR V

            jkobus Jarek Kobus
            jkobus Jarek Kobus
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes