CppEditor: Fix a crash on concurrent access to knownNames

Fixes: QTCREATORBUG-31569
Change-Id: Ic7248facf78c7778aae50a598c01c77e6b2897c1
Reviewed-by: Christian Kandeler <christian.kandeler@qt.io>
Reviewed-by: hjk <hjk@qt.io>